@@ -17,7 +17,7 @@
     <string name="line4">line4</string>
     <string name="pnr_number_length">10</string>
 
-    <string name="app_version">Version 3.2.30 - Marvin2 (March 2014)</string>
+    <string name="app_version">Version 3.2.40 - Marvin2 (April 2014)</string>
     <string name="app_desc">You can use this free app to check the status of a valid train PNR Number in India</string>
 	<string name="app_disclaimer">DISCLAIMER: No portion of PNRStatus data retrieved is persisted by this app.\n
 	The PNR Status is retrieved using third party services.\n 
